--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,44 @@
- 
+*{
+    box-sizing: border-box;
+
+}
+header{
+    background-color: #E8630A;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    text-decoration: none;
+    
+}
+
+header ul li {
+    list-style: none;
+    float: left;
+    align-content: center;
+    color: white;
+    padding-left: 10rem;
+    font-size: large ;
+    font-weight: 800;
+    text-underline-position: above;
+}
+
+header ul  {
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+}
+
+button{
+    background-color: #035397 ;
+    
+    color: rgb(255, 255, 255);
+    border-radius: 10px;
+    border-color: none ;
+    margin-bottom: 0rem;
+    padding: 12px;
+    font-weight: 800;
+    font-size: large;
+
+}
