--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@ header{
     justify-content: center;
     padding: 1rem;
     text-decoration: none;
+    border-radius: 10px;
     
 }
 
@@ -16,25 +17,24 @@ header ul li {
     list-style: none;
     float: left;
     align-content: center;
-    color: white;
-    padding-left: 10rem;
+    color:#B22727;
+    padding-left: 5rem;
     font-size: large ;
     font-weight: 800;
-    text-underline-position: above;
+  
 }
 
 header ul  {
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
+    
+   
 
 }
 
 button{
-    background-color: #035397 ;
+    background-color: #001E6C ;
     
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
+    color: #FCD900;
+    border-radius: 20px;
     border-color: none ;
     margin-bottom: 0rem;
     padding: 12px;
@@ -42,3 +42,50 @@ button{
     font-size: large;
 
 }
+
+.hero{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 75px 20px;
+    background-image: url(../assets/maarten-deckers-8RU1Ei3KcPw-unsplash.jpg);
+    border-radius: 50px;
+    
+    
+
+}
+.hero img{
+    border-radius: 50%;
+    height: 400px;
+    width: 400px;
+    margin: 0rem 10rem;
+
+}
+.hero .about {
+    
+    margin: 0rem 0rem;
+    padding-right: 10rem;
+
+}
+
+.proj{
+    
+    align-items: center;
+    justify-content: center;
+    padding-left: 10rem;
+    background-color: #035397;
+
+}
+
+.projlist{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+.proj .projlist img{
+    padding-left: 0px;
+
+}
+
